--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "unique_task_queue",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha ./test"
   },
   "author": "",
   "license": "ISC",
